[gd_scene load_steps=3 format=3 uid="uid://cwin011rx52n7"]

[ext_resource type="Texture2D" uid="uid://pld574giprix" path="res://assets/prof_pics/silhouette.png" id="1_m5oeo"]
[ext_resource type="Script" uid="uid://ck1rp36ofvy52" path="res://components/apps/fumble/fumble_profile.gd" id="1_r7irv"]

[node name="FumbleProfile" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_r7irv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ProfilePic" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_m5oeo")

[node name="AttractivenessLabel" type="Label" parent="MarginContainer/VBoxContainer/ProfilePic"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.5
offset_right = 20.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
text = "0/10"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/ProfilePic"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -15.0
offset_right = 63.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
text = "Name McNamerson"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
mouse_filter = 1

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1

[node name="TagsScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Control3"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TagsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label8" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Label9" type="Label" parent="MarginContainer/VBoxContainer/Control3/TagsScrollContainer/TagsHBoxContainer"]
layout_mode = 2
text = "brat"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
mouse_filter = 1

[node name="BioLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
text = "bio text"
autowrap_mode = 3
